--- a/css/st_HP.css
+++ b/css/st_HP.css
@@ -18,6 +18,7 @@ body {
 	/*text-align: center;*/
 	height: 100%;
 	width: 100%;
+	min-width: 1200px;
 }
 
 		/*    TOP    */
@@ -32,7 +33,9 @@ body {
 }
 
 #info {
-	margin-left: 35%;
+	position: relative;
+	left: 35%;
+	/*right: 35%;*/
 	margin-top: 5px;
 }
 
@@ -65,6 +68,7 @@ a {
 
 #center {
 	margin-left: 30%;
+	margin-right: 30%;
 }
 
 /*    ATIKL   */
@@ -123,6 +127,6 @@ button {
 	font: bold 16px Arial;
 	border-width: 0;
 	position: relative;
-	left: 20px;
+	left: 0;
 	top: 1px;
 }
