--- a/css/st_HP.css
+++ b/css/st_HP.css
@@ -32,7 +32,7 @@ body {
 #top {
 	width: 100%;
 	height: 55px;
-	background-image: url(../img/2.png);
+	background: white url(../img/2.png) no-repeat;
 	/*margin-top: -20px;*/
 	margin-bottom: 100px;
 	padding-top: 5px;
@@ -67,7 +67,7 @@ a {
 #content {
 	width: 100%;
 	height: 100%;
-	background-image: url(../img/2.png);
+	background: white url(../img/2.png) no-repeat;
 	padding-top: 10px;
 	margin-bottom: 100px; 
 }
