--- a/css/st_HP.css
+++ b/css/st_HP.css
@@ -8,9 +8,9 @@ ul {
 }
 
 		/*    BG IMAGE    */
-html {
+/*html {
 	min-width: 1200px;
-}
+}*/
 
 body {
 	background: white url(../img/1.jpg) no-repeat;
