--- a/css/st_HP.css
+++ b/css/st_HP.css
@@ -37,8 +37,8 @@ body {
 
 #info {
 	position: relative;
-	left: 35%;
-	/*right: 35%;*/
+	left: 37%;
+	right: 25%;
 	margin-top: 5px;
 }
 
@@ -57,6 +57,38 @@ body {
 a {
 	color: white;
 }
+#info p {
+  display: inline-block;
+  text-align: center;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+
+#info span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+#info span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+#info:hover span {
+  padding-right: 15px;
+}
+
+#info:hover span:after {
+  opacity: 1;
+  right: 0;
+}
 
 		/*    CENTER-CONTENT    */
 
@@ -70,8 +102,8 @@ a {
 }
 
 #center {
-	margin-left: 30%;
-	margin-right: 30%;
+	margin-left: 33%;
+	margin-right: 25%;
 }
 
 /*    ATIKL   */
@@ -106,30 +138,77 @@ a {
 #form {
 	margin-top: 10px;
 	margin-bottom: 30px;
-	margin-left: 8%;
+	/*margin-left: 8%;*/
 }
+
+input:active, button:active, input:hover, input:focus, button:focus {
+    outline: 0;
+    outline-offset: 0;
+}
+
+input:focus, input:hover {
+	box-shadow: inset 0 12px 16px 0 rgba(0,0,0,0.35);
+}
+
+/*button:hover {
+	box-shadow: 0 12px 16px 0 rgba(0.9,0,0,0.5);
+}*/
 
 input {
 	border-radius: 5px;
 	background-color: #EAF2FF;
-	width: 200px;
-	height: 40px;
-	padding-left: 10px;
+/*	width: 200px;
+	height: 40px;*/
+	padding: 10px;
+	font: normal 150% Arial;
 	border-width: 0;
+	border: none;
 }
 
-input[type="email"]:focus {
+/*input[type="email"]:focus {
   box-shadow: inset 0 0 0 2px rgba(0,0,0,.2);
-}
+}*/
 
 button {
 	border-radius: 5px;
 	background-color: #FFBD23;
 	margin-left: 20px;
-	padding: 11px;
-	font: bold 16px Arial;
+	padding: 10px;
+	font: bold 150% Arial;
 	border-width: 0;
-	position: relative;
-	left: 0;
-	top: 1px;
+	border: none;
+	/*position: relative;*/
+}
+
+.button {
+  display: inline-block;
+  text-align: center;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 15px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
