--- a/css/st_HP.css
+++ b/css/st_HP.css
@@ -21,7 +21,7 @@ body {
 	/*text-align: center;*/
 	height: 100%;
 	width: 100%;
-	min-width: 1200px;
+	/*min-width: 1200px;*/
 }
 
 		/*    TOP    */
